# markets-strategy-copilot

./: .env.example  .gitignore  AGENTS.md  DECISIONS.md  Makefile  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  config.py  db.py  demo_store.py  main.py  models.py  repository.py  schemas.py
apps/api/app/routers/: api.py
apps/api/app/services/: __init__.py  alerts.py  backtest.py  indicators.py  insights.py  live.py  live_refresh.py  macro.py  observability.py  policy.py  portfolio.py  pro_features.py  provider_checks.py  providers.py  replay.py  reporting.py  sec.py  signal_diff.py  signals.py  terminal_features.py  workspace.py
apps/api/tests/: conftest.py  test_api.py  test_backtest.py  test_indicators.py  test_packaging_safety.py  test_provider_checks.py  test_signal_surfaces.py  test_signals.py  test_stale_data.py  test_terminal_features.py  test_v2_services.py
docs/: architecture.md  artefact-completion-evidence.md  demo-script.md  indicators.md  licensing-and-limitations.md  observability.md  provider-matrix.md  provider-troubleshooting.md  requirements-traceability.md  screenshots.md  security.md  testing.md  user-guide.md  windows-installer-roadmap.md
scripts/: capture_interaction_screenshots.cjs  generate_artefacts.py  generate_demo_data.py  package_chatgpt_review.py  package_release.ps1  package_release.py  package_release.sh  package_submission.ps1  package_submission.py  package_submission.sh  prepare_demo.ps1  run_checks.py  run_checks.sh  run_smoke.py  seed_demo.sh  (+1 more)
(+90 files in other folders)
