[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markets-strategy-copilot-api"
version = "0.1.0"
description = "FastAPI backend for Markets Strategy Copilot"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "pydantic-settings>=2.6.1",
  "httpx>=0.27.2",
  "numpy>=2.1.3",
  "pandas>=2.2.3",
  "pyyaml>=6.0.2",
  "python-dateutil>=2.9.0",
  "reportlab>=4.2.5",
  "matplotlib>=3.9.2",
  "openai>=1.54.4",
  "python-multipart>=0.0.17"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.27.2",
  "pytest-cov>=5.0.0"
]

[tool.setuptools]
packages = ["app"]
